# math0471

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  convert.py  cube.cpp  cube.h  devenv-linux.sh  devenv-mingw.bat  devenv-mingw64.bat  devenv-ubuntu.sh  devenv-vs2017.bat  fdtd.cpp  fdtd.h  paraview.cpp  paraview.h  sph.cpp  sph.h  strpoints.py  test_base64z.py
cmake/: run_test.cmake
exe/: CMakeLists.txt  cube.cpp  fdtd.cpp  sph.cpp
exe/fdtd/: CMakeLists.txt  fdtd.cpp  test1.json
exe/fdtd_mpi/: CMakeLists.txt  fdtd_mpi.cpp
exe/sph/: CMakeLists.txt  sph.cpp
json/: CMakeLists.txt  json.cpp  json.h  test1.json
mumps/: CMakeLists.txt  laplace.cpp  laplace.h  main.cpp  readpars.cpp  readpars.h  scaling.py  test1.json
src/: CMakeLists.txt  vtklite.cpp  vtklite.h  vtl.cpp  vtl.h  vtlSPoints.cpp  vtlSPoints.h  vtlVec3.h
tests/: CMakeLists.txt  writevtk.py
tests/test_spoint/: main.cpp  test_spoint00000000.vtk
vtl/: vtl.cpp  vtl.h  vtlSPoints.cpp  vtlSPoints.h  vtlVec3.h  vtl_polydata.cpp  vtl_polydata.h  vtl_spoints.cpp  vtl_spoints.h
