PROJECT(SPH CXX)
cmake_minimum_required(VERSION 2.7)

FIND_PACKAGE(ZLIB)
IF(ZLIB_FOUND)
    add_definitions(-DUSE_ZLIB)
    INCLUDE_DIRECTORIES( ${ZLIB_INCLUDE_DIR} )
ENDIF()

FILE(GLOB SRCS *.h *.cpp)
ADD_EXECUTABLE(sph ${SRCS})
IF(ZLIB_FOUND)
    TARGET_LINK_LIBRARIES(sph ${ZLIB_LIBRARY} )
ENDIF()



